--- a/hocadvance/src/App.css
+++ b/hocadvance/src/App.css
@@ -1,20 +1,9 @@
-.App {
+h2 {
   text-align: center;
-}
-.deve-view {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  color: crimson;
+  font-size: 5em;
 }
 
-.deve-view .deve-list p {
-  border: 10px solid rgb(19, 18, 18);
-  background-color: rgba(0, 0, 0, 1);
-  align-items: center;
-  justify-content: center;
-  height: 15%;
-  width: 50%;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h2:hover {
+  color: gold;
 }
